--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,71 +1,75 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
-form label{
+
+form label {
     display: inline-block;
-    width:150px;
+    width: 150px;
 }
 
-header{
-    background-color: #84B222;
-    text-align:center;
+header {
+    background-color: #214B78;
+    text-align: center;
 }
 
-.entete{
+.entete {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding:20px;
+    padding: 20px;
 }
-nav ul{
+
+nav ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
-    padding-bottom:20px;
+    padding-bottom: 20px;
 }
 
 nav a {
-    color:#fff;
-    font-size:2em;
-    padding:10px;
+    color: #fff;
+    font-size: 2em;
+    padding: 10px;
     display: block;
 }
 
-h1{
-    margin-left:30px;
+h1 {
+    margin-left: 30px;
     text-transform: uppercase;
-    color:#fff;
+    color: #fff;
 }
 
-main{
-    max-width:600px;
-    width:100%;
-    margin:0 auto;
+main {
+    max-width: 600px;
+    width: 100%;
+    margin: 0 auto;
 }
 
-form button{
+form button {
     background-color: #621eab;
-    color:#fff;
-    border:none;
-    padding:10px 15px;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
     /*font-weight:bold;*/
-    font-size: 1.2em;;
+    font-size: 1.2em;
+    ;
 }
-main ul{
+
+main ul {
     list-style-type: none;
-    
+
 }
 
-main ul li{
-    margin:10px 0;
-    
+main ul li {
+    margin: 10px 0;
+
 }
 
-.contact{
-    min-width:230px;
-    display:inline-block;
+.contact {
+    min-width: 230px;
+    display: inline-block;
 }
 
-main ul li a{
-    color:#621eab;
+main ul li a {
+    color: #621eab;
 }
