--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,8 +1,11 @@
 <%- include('header') -%>
 <main>
-    <h2><%= contact.civilite %> <%= contact.lastName %> <%= contact.surname %></h2>
+    <h2><%= contact.civilite %> <%= contact.lastName %> <%= contact.firstName %></h2>
     <p><strong>Numéro de téléphone: </strong><%= contact.phone %></p>
-    <p><strong>Adresse Email </strong><%= contact.email %></p>
+    <p><strong>Adresse Email: </strong><%= contact.email %></p>
+
+    <img width="100" src="/images/<%= contact.image %>" alt="Photo de <%= contact.firstName %> <%= contact.lastName %>">
+
     <a href="/contacts/<%= id %>/update">Modifier le contact</a>
 </main>
 <%- include('footer') -%>
